[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/ContextMenu/ContextMenu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.737255 )
margin_right = 142.0
margin_bottom = 87.0

[node name="PlayerInvetoryPanel" type="Panel" parent="."]
margin_left = 12.0
margin_top = 10.0
margin_right = 44.0
margin_bottom = 42.0

[node name="InvetoryItem1" type="CenterContainer" parent="PlayerInvetoryPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Position2D" type="Position2D" parent="PlayerInvetoryPanel/InvetoryItem1"]
position = Vector2( 16, 15 )

[node name="EntityInvetoryPanel" type="Panel" parent="."]
margin_left = 60.0
margin_top = 10.0
margin_right = 124.0
margin_bottom = 74.0

[node name="InvetoryItem1" type="CenterContainer" parent="EntityInvetoryPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Position2D" type="Position2D" parent="EntityInvetoryPanel/InvetoryItem1"]
position = Vector2( 16, 15 )

[node name="InvetoryItem2" type="CenterContainer" parent="EntityInvetoryPanel"]
anchor_left = 0.484375
anchor_right = 1.48438
anchor_bottom = 1.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Position2D" type="Position2D" parent="EntityInvetoryPanel/InvetoryItem2"]
position = Vector2( 16, 15 )

[node name="InvetoryItem3" type="CenterContainer" parent="EntityInvetoryPanel"]
anchor_top = 0.484375
anchor_right = 1.0
anchor_bottom = 1.48438
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Position2D" type="Position2D" parent="EntityInvetoryPanel/InvetoryItem3"]
position = Vector2( 16, 15 )

[node name="InvetoryItem4" type="CenterContainer" parent="EntityInvetoryPanel"]
anchor_left = 0.5
anchor_top = 0.484375
anchor_right = 1.5
anchor_bottom = 1.48438
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Position2D" type="Position2D" parent="EntityInvetoryPanel/InvetoryItem4"]
position = Vector2( 16, 15 )

[node name="Button" type="Button" parent="."]
margin_left = 15.0
margin_top = 52.0
margin_right = 43.0
margin_bottom = 72.0
text = "C"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
